--- a/src/libgetenv/CMakeLists.txt
+++ b/src/libgetenv/CMakeLists.txt
@@ -1,13 +1,4 @@
-set (WRAP "-Wl")
-set (WRAP "${WRAP},--wrap=getenv")
-set (WRAP "${WRAP},--wrap=secure_getenv")
-SET(CMAKE_REQUIRED_FLAGS ${WRAP})
-CHECK_C_COMPILER_FLAG("" WRAP_GETENV)
-
-# with --wrap=main, the example program of CHECK_C_COMPILER_FLAG would fail
-set (WRAP "${WRAP},--wrap=main")
-
-IF(WRAP_GETENV)
+if (BUILD_SHARED)
 	add_subdirectory(include)
 	add_subdirectory(src)
 	add_subdirectory(examples)
@@ -17,6 +8,4 @@ IF(WRAP_GETENV)
 			add_subdirectory (tests)
 		endif (BUILD_FULL OR BUILD_STATIC)
 	endif(ENABLE_TESTING)
-ELSE()
-	message(STATUS "do not compile elektra-getenv because compiler flag ${WRAP} is not working")
-ENDIF()
+endif ()
