add first unit test
allow one to use kdbgetenv in c++
link against CMAKE_DL_LIBS
suppression file for dlsym memleak
Init elektraConfig first, because it will be used during kdbOpen
do not use argc, argv if not available

added some debug info

--- a/src/libgetenv/src/CMakeLists.txt
+++ b/src/libgetenv/src/CMakeLists.txt
@@ -8,6 +8,6 @@ set (SOURCES ${SRC_FILES} ${HDR_FILES})
 
 add_library (elektragetenv SHARED ${SOURCES})
 
-target_link_libraries (elektragetenv ${WRAP} elektra)
+target_link_libraries (elektragetenv elektra ${CMAKE_DL_LIBS})
 
 install (TARGETS elektragetenv DESTINATION lib${LIB_SUFFIX})
