--- a/src/libgetenv/tests/CMakeLists.txt
+++ b/src/libgetenv/tests/CMakeLists.txt
@@ -8,4 +8,5 @@ file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
 	add_gtest (${name})
+	target_link_libraries(${name} elektragetenv)
 endforeach (file ${TESTS})
