--- a/src/libtools/tests/CMakeLists.txt
+++ b/src/libtools/tests/CMakeLists.txt
@@ -10,4 +10,5 @@ file (GLOB TESTS testtool_*.cpp)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
 	add_gtest (${name})
+	target_link_elektratools(${name})
 endforeach (file ${TESTS})
