kslookup benchmark kslookup

--- a/benchmarks/kslookup/CMakeLists.txt
+++ b/benchmarks/kslookup/CMakeLists.txt
@@ -1,5 +1,7 @@
-add_headers (HDR_FILES)
+#TODO KURT build all with one target
+include (LibAddMacros)
 
+add_headers (HDR_FILES)
 
 include_directories ("${CMAKE_CURRENT_SOURCE_DIR}")
 
@@ -10,9 +12,14 @@ target_link_elektra(benchmark_kslookup_gendata)
 set_target_properties (benchmark_kslookup_gendata PROPERTIES
 		COMPILE_DEFINITIONS HAVE_KDBCONFIG_H)
 
-# hsearch
-set (SOURCES ${HDR_FILES} benchmark.h benchmark.c hsearch.c)
-add_executable (benchmark_kslookup_hsearch ${SOURCES})
-target_link_elektra(benchmark_kslookup_hsearch)
-set_target_properties (benchmark_kslookup_hsearch PROPERTIES
+# hsearch and kslookup
+macro (benchmark_kslookup_c source)
+set (SOURCES ${HDR_FILES} benchmark.h benchmark.c ${source}.c)
+add_executable (benchmark_kslookup_${source} ${SOURCES})
+target_link_elektra(benchmark_kslookup_${source})
+set_target_properties (benchmark_kslookup_${source} PROPERTIES
 		COMPILE_DEFINITIONS HAVE_KDBCONFIG_H)
+endmacro (benchmark_kslookup_c)
+
+benchmark_kslookup_c (hsearch)
+benchmark_kslookup_c (kslookup)
