--- a/src/bindings/swig/python3/CMakeLists.txt
+++ b/src/bindings/swig/python3/CMakeLists.txt
@@ -13,6 +13,11 @@ elseif (PYTHONLIBS_VERSION_STRING MATCHES "^2\\.[0-9]+")
 	remove_binding(swig_python3 "python3 is for python 3 only and not ${PYTHONLIBS_VERSION_STRING}")
 else()
 	message(STATUS "Include Binding swig_python3")
+	if (${SWIG_VERSION} MATCHES "^2\\.")
+		message(WARNING "Python bindings might crash if generated with SWIG 2."
+				" Please upgrade to SWIG 3 or later.")
+	endif()
+
 	add_headers (HDR_FILES)
 	add_cppheaders (HDR_FILES)
 
