switch to cpp, add version help handling

--- a/src/libgetenv/src/CMakeLists.txt
+++ b/src/libgetenv/src/CMakeLists.txt
@@ -2,7 +2,7 @@ include (LibAddMacros)
 
 add_headers(HDR_FILES)
 
-file (GLOB_RECURSE SRC_FILES *.c)
+file (GLOB_RECURSE SRC_FILES *.cpp)
 
 set (SOURCES ${SRC_FILES} ${HDR_FILES})
 
