also generate in-code description (--help)

--- a/src/libgetenv/CMakeLists.txt
+++ b/src/libgetenv/CMakeLists.txt
@@ -1,6 +1,13 @@
 if (BUILD_SHARED AND ENABLE_CXX11)
 	add_subdirectory(include)
 	include_directories(include)
+
+	set(MDFILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
+	set(NAME elektrify-getenv)
+
+	generate_readme(${NAME})
+	include_directories(${CMAKE_CURRENT_BINARY_DIR})
+
 	add_subdirectory(src)
 	add_subdirectory(examples)
 
@@ -13,8 +20,7 @@ if (BUILD_SHARED AND ENABLE_CXX11)
 	find_program(RONN_LOC ronn)
 	if (RONN_LOC)
 		set(SECTION 1)
-		set(MDFILE ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
-		set(OUTFILE ${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv.${SECTION})
+		set(OUTFILE ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.${SECTION})
 
 		add_custom_command(
 			OUTPUT ${OUTFILE}
@@ -22,8 +28,8 @@ if (BUILD_SHARED AND ENABLE_CXX11)
 			COMMAND ${RONN_LOC}
 			ARGS -r --pipe ${MDFILE} > ${OUTFILE}
 			)
-		add_custom_target(man-elektrify-getenv ALL DEPENDS ${OUTFILE})
-		add_dependencies(man man-elektrify-getenv)
+		add_custom_target(man-${NAME} ALL DEPENDS ${OUTFILE})
+		add_dependencies(man man-${NAME})
 
 		install(
 			FILES ${OUTFILE}
