--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -103,6 +103,12 @@ description=The default value will be used if no other value could
   be found successfully.
 
 
+[context]
+status=implemented
+usedby/api=getenv
+description=use /env/layer and internal information to facilitate
+  a context-aware lookup
+
 
 #
 # For tagging binary keys
