--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -103,11 +103,21 @@ description=The default value will be used if no other value could
   be found successfully.
 
 
+
+
 [context]
 status=implemented
 usedby/api=getenv
 description=use /env/layer and internal information to facilitate
   a context-aware lookup
+
+
+[callback/*]
+status=reserved
+usedby/tool=kdb
+usedby/api=getenv
+description=reserved meta information that will be preserved during the whole
+  chain of ksLookup() callback calls
 
 
 #
