add CXX11 flags, fix missing file

--- a/debian/rules
+++ b/debian/rules
@@ -30,6 +30,7 @@ CMAKE_FLAGS = \
 	-DINSTALL_TESTING=ON \
 	-DENABLE_KDB_TESTING=OFF \
 	-DBUILD_PDF=OFF \
+	-DENABLE_CXX11=ON \
 	-DBINDINGS="cpp;swig_lua;swig_python2" \
 	-DTARGET_TEST_DATA_FOLDER=share/libelektra-test/test-data \
 	-DCMAKE_C_FLAGS="$(CFLAGS)" \
