--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -37,6 +37,11 @@ if (INSTALL_SYSTEM_FILES)
 endif()
 
 configure_file(
+	"${CMAKE_CURRENT_SOURCE_DIR}/elektrify-getenv.in"
+	"${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv")
+install (PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv" DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+
+configure_file(
 	"${CMAKE_CURRENT_SOURCE_DIR}/make-source-package.in"
 	"${CMAKE_CURRENT_BINARY_DIR}/make-source-package")
 
