--- a/tests/shell/include_common.sh.in
+++ b/tests/shell/include_common.sh.in
@@ -13,6 +13,7 @@
 # variables to count up errors and tests
 nbError=0
 nbTest=0
+nbSkip=0
 
 # the script itself
 scriptName=`basename $0`
@@ -93,7 +94,12 @@ exit_if_fail ()
 
 end_script()
 {
-	echo "$scriptName RESULTS: $nbTest test(s) done $nbError error(s)."
+	echo -n "$scriptName RESULTS: $nbTest test(s) done"
+	if [ $nbSkip -ne 0 ]
+	then
+		echo -n " $nbSkip skipped"
+	fi
+	echo " $nbError error(s)."
 	exit "$nbError"
 }
 
@@ -209,12 +215,6 @@ is_plugin_available()
 	done
 	return 1
 }
-
-
-
-
-
-
 
 
 
