METADATA.ini: fix explanation

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -294,7 +294,7 @@ description= a regular expression to check against
 [check/validation/message]
 status= implemented
 usedby/plugin= validation
-description= a message added to warning if validation fails
+description= the message added to the error if validation fails
 
 [check/range]
 status= idea
