more work on python plugin

--- a/src/bindings/swig/lua/CMakeLists.txt
+++ b/src/bindings/swig/lua/CMakeLists.txt
@@ -24,7 +24,7 @@ else()
 	set_target_properties (swig-lua PROPERTIES OUTPUT_NAME kdb)
 	set_target_properties (${SWIG_MODULE_swig-lua_REAL_NAME} PROPERTIES PREFIX "")
 
-	set_source_files_properties (${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
+	set_source_files_properties (${swig_generated_file_fullname} PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS} -DSWIG_TYPE_TABLE=kdb")
 
 	install (
 		TARGETS swig-lua
