--- a/src/plugins/python/CMakeLists.txt
+++ b/src/plugins/python/CMakeLists.txt
@@ -1,19 +1,31 @@
 find_package(PythonLibs REQUIRED)
+find_package(SWIG 3 REQUIRED)
 
-if (PYTHONLIBS_FOUND)
+if (PYTHONLIBS_FOUND AND SWIG_FOUND)
+	execute_process (
+		COMMAND ${SWIG_EXECUTABLE} -c++ -python -py3 -external-runtime runtime.h
+		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+	)
+
 	include (LibAddMacros)
 
-	set (SOURCES python.h python.c)
+	set (SOURCES python.hpp python.cpp)
 	add_sources (elektra-full ${SOURCES})
 	add_headers (SOURCES)
+	add_cppheaders (SOURCES)
 
 	set (PLUGIN_NAME elektra-python)
 	add_library (${PLUGIN_NAME} MODULE ${SOURCES})
 
-	install (TARGETS ${PLUGIN_NAME}
-		DESTINATION lib${LIB_SUFFIX}/${TARGET_PLUGIN_FOLDER})
+	set_target_properties (${PLUGIN_NAME} PROPERTIES COMPILE_FLAGS "-DSWIG_TYPE_TABLE=kdb")
+
+	install (
+		TARGETS ${PLUGIN_NAME}
+		DESTINATION lib${LIB_SUFFIX}/${TARGET_PLUGIN_FOLDER}
+	)
 
 	include_directories (${PYTHON_INCLUDE_PATH})
+	include_directories (${CMAKE_CURRENT_BINARY_DIR})
 
 	target_link_libraries (${PLUGIN_NAME} elektra)
 	target_link_libraries (${PLUGIN_NAME} ${PYTHON_LIBRARIES})
@@ -25,6 +37,6 @@ if (PYTHONLIBS_FOUND)
 	add_plugintest (python)
 	configure_file (test_elektra.py ${CMAKE_CURRENT_BINARY_DIR}/test_elektra.py)
 	configure_file (test_elektra2.py ${CMAKE_CURRENT_BINARY_DIR}/test_elektra2.py)
-else (PYTHONLIBS_FOUND)
-	remove_plugin (python "python libraries not found")
-endif (PYTHONLIBS_FOUND)
+else (PYTHONLIBS_FOUND AND SWIG_FOUND)
+	remove_plugin (python "python libraries or swig not found")
+endif (PYTHONLIBS_FOUND AND SWIG_FOUND)
