Mac Os X: remove_tool race, for #270

--- a/src/tools/race/CMakeLists.txt
+++ b/src/tools/race/CMakeLists.txt
@@ -1,10 +1,14 @@
 find_package(Threads)
 
-add_headers (HDR_FILES)
+if(APPLE)
+	remove_tool(race "race tool does not compile under MAC OS X")
+else()
+	add_headers (HDR_FILES)
 
-add_executable(race race.c)
-tool_link_elektra(race)
-target_link_libraries(race ${CMAKE_THREAD_LIBS_INIT})
-target_link_libraries(race ${CMAKE_REALTIME_LIBS_INIT})
+	add_executable(race race.c)
+	tool_link_elektra(race)
+	target_link_libraries(race ${CMAKE_THREAD_LIBS_INIT})
+	target_link_libraries(race ${CMAKE_REALTIME_LIBS_INIT})
 
-install(TARGETS race DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+	install(TARGETS race DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+endif()
