Fix GI binding for Python3

--- a/src/bindings/gi/python3/CMakeLists.txt
+++ b/src/bindings/gi/python3/CMakeLists.txt
@@ -37,7 +37,7 @@ if (PYTHONINTERP_FOUND)
 		OUTPUT_STRIP_TRAILING_WHITESPACE
 	)
 
-	install (DIRECTORY python/gi DESTINATION ${PYTHON_SITE_PACKAGES})
+	install (DIRECTORY gi DESTINATION ${PYTHON_SITE_PACKAGES})
 
 	file (GLOB TESTS testgi_*.py)
 	foreach (file ${TESTS})
