fix cmake/cmake for #279

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -34,4 +34,4 @@ install ( FILES
 	)
 
 ADD_CUSTOM_TARGET(uninstall
-	"${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_SOURCE_DIR}/cmake/ElektraUninstall.cmake")
+	"${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_SOURCE_DIR}/ElektraUninstall.cmake")
