install elektrify-getenv script only on linux, fix mktemp function

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -36,10 +36,12 @@ if (INSTALL_SYSTEM_FILES)
 			RENAME kdb)
 endif()
 
-configure_file(
-	"${CMAKE_CURRENT_SOURCE_DIR}/elektrify-getenv.in"
-	"${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv")
-install (PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv" DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC AND ${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+	configure_file(
+		"${CMAKE_CURRENT_SOURCE_DIR}/elektrify-getenv.in"
+		"${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv")
+		install (PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv" DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+endif ()
 
 configure_file(
 	"${CMAKE_CURRENT_SOURCE_DIR}/make-source-package.in"
