--- a/tests/shell/include_common.sh.in
+++ b/tests/shell/include_common.sh.in
@@ -218,12 +218,12 @@ is_plugin_available()
 
 mktempdir_elektra()
 {
-	command mktemp -d 2>/dev/null || mktemp -d -t 'libelektra-test'
+	mktemp -d 2>/dev/null || mktemp -d -t 'libelektra-test'
 }
 
 mktempfile_elektra()
 {
-	command mktemp -t elektraenv.XXXXXXXXX 2>/dev/null || mktemp -t 'elektraenv'
+	mktemp -t elektraenv.XXXXXXXXX 2>/dev/null || mktemp -t 'elektraenv'
 }
 
 
