remove unneccessary check

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -36,7 +36,7 @@ if (INSTALL_SYSTEM_FILES)
 			RENAME kdb)
 endif()
 
-if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC AND ${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC)
 	configure_file(
 		"${CMAKE_CURRENT_SOURCE_DIR}/elektrify-getenv.in"
 		"${CMAKE_CURRENT_BINARY_DIR}/elektrify-getenv")
