make searching for SWIG consistent

--- a/src/bindings/CMakeLists.txt
+++ b/src/bindings/CMakeLists.txt
@@ -14,18 +14,13 @@ set(regex "swig_.*")
 list_find(BINDINGS regex found)
 if (found)
 	message(STATUS "Include Binding swig")
+	find_swig()
 	find_package(SWIG 3)
 	if (SWIG_FOUND)
 		add_subdirectory (swig)
 	else()
-		message(STATUS "Search for swig2 instead")
-		find_package(SWIG 2 QUIET)
-		if (SWIG_FOUND)
-			add_subdirectory (swig)
-		else()
-			list_filter(BINDINGS regex)
-			remove_binding(swig "neither swig2/3 found. Please install swig3.0")
-		endif()
+		list_filter(BINDINGS regex)
+		remove_binding(swig "neither swig2/3 found. Please install swig3.0 and set -DSWIG_EXECUTABLE=")
 	endif()
 endif()
 
