--- a/scripts/elektrify-getenv.in
+++ b/scripts/elektrify-getenv.in
@@ -2,6 +2,13 @@
 
 GETENV="@CMAKE_INSTALL_PREFIX@/lib@LIB_SUFFIX@/libelektragetenv.so"
 
+if [ ! -f "$GETENV" ]
+then
+	echo "You do not have $GETENV installed"
+	echo "Maybe your system is not supported (currently needs to be glibc-based)"
+	exit 0
+fi
+
 # so that kdb elektrify-getenv getenv works!
 export PATH="@CMAKE_INSTALL_PREFIX@/@TARGET_TOOL_EXEC_FOLDER@:$PATH"
 
