debian: remove python3 dep
(wheezy builds wont install on jessie otherwise)

--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 binary/libelektra-bin binary/libelektra-dev:: binary/libelektra
 
 # Which plugins and tools should be built
-ELEKTRA_PLUGINS='ALL;-jni'
+ELEKTRA_PLUGINS='ALL;-jni;-python'
 ELEKTRA_TOOLS='ALL'
 
 #workaround for hardening flags
