python: rename ELEKTRA_PLUGIN_NAME to PYTHON_PLUGIN_NAME

--- a/src/plugins/python/CMakeLists.txt
+++ b/src/plugins/python/CMakeLists.txt
@@ -43,7 +43,7 @@ if (PYTHONLIBS_FOUND AND SWIG_FOUND)
 			WORKING_DIRECTORY
 				${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python3/
 			COMPILE_DEFINITIONS
-				ELEKTRA_PLUGIN_NAME=\"python\"
+				PYTHON_PLUGIN_NAME=\"python\"
 		)
 
 		install(DIRECTORY python DESTINATION ${TARGET_TEST_DATA_FOLDER})
