--- a/src/plugins/python2/CMakeLists.txt
+++ b/src/plugins/python2/CMakeLists.txt
@@ -47,7 +47,7 @@ elseif (PYTHON2LIBS_FOUND AND SWIG_FOUND)
 			WORKING_DIRECTORY
 				${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python2/
 			COMPILE_DEFINITIONS
-				ELEKTRA_PLUGIN_NAME=\"python2\"
+				PYTHON_PLUGIN_NAME=\"python2\"
 		)
 
 		install(DIRECTORY python2 DESTINATION ${TARGET_TEST_DATA_FOLDER})
