--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -302,7 +302,25 @@ description= range checks, from-to, or arbitrary sets of numbers
 see= check/type/min and check/type/max for already existing
   implementations
 
+[check/enum]
+status= implemented
+usedby/plugin= enum
+description= List of apostrophe enclosed values separated by
+	commas to check against
 
+[check/calculate]
+status= implemented
+usedby/plugin= calculate
+type= string
+description= A string starting with a logical comparator symbol
+	followed by a Polish prefix notation to calculate a value
+	to check against
+[check/condition]
+status= implemented
+usedby/plugin= conditionals
+type= string
+description= A ternary conditional style operator to define 
+	relations between keys
 #
 # Other information about keys
 #
@@ -471,3 +489,14 @@ type= string
 description= the space used between a comment and the beginning of the
  line or after end of payload data (for inline comments)
  If no start token was found, only space and no comment is present.
+
+
+#
+# Plugin specific Metadata
+#
+
+[csv/order]
+status= implemented
+usedby/plugins= csvstorage
+type= string
+description= used to manage the column order.
