--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -55,6 +55,7 @@ description= relative order in the keyset if non-alphabetical order
  this.
 note= this will rarely used within specifications, but is directly
   derived from configuration files.
+  I.e. only storage plugins set and get this property.
 
 [comment]
 type= string
