honor BUILD_DOCUMENTATION for manpage, fix #309

--- a/src/libgetenv/CMakeLists.txt
+++ b/src/libgetenv/CMakeLists.txt
@@ -21,7 +21,7 @@ if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC)
 	endif(ENABLE_TESTING)
 
 	find_program(RONN_LOC ronn)
-	if (RONN_LOC)
+	if (BUILD_DOCUMENTATION AND RONN_LOC)
 		set(SECTION 1)
 		set(OUTFILE ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.${SECTION})
 
@@ -38,7 +38,7 @@ if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC)
 			FILES ${OUTFILE}
 			DESTINATION share/man/man${SECTION}
 			)
-	else(RONN_LOC)
+	else()
 		message(WARNING "did not find ronn")
-	endif(RONN_LOC)
+	endif()
 endif ()
