--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -506,11 +506,11 @@ description= used to manage the column order.
 status= implemented
 usedby/plugins= crypto
 type= string
-description= used to mark a key as encrypted. If value is not empty, the value has been encrypted.
+description= used to mark a key as encrypted. If value is not empty, the value has been encrypted. Encrypted values are of type "binary". The original type will be restored after decryption has taken place.
 
 [crypto/encrypt]
 status= implemented
 usedby/plugins= crypto
 type= string
-description= used to mark a key for encryption. The crypto plugin is supposed to encrypt the key.
+description= used to mark a key for encryption. The crypto plugin is supposed to encrypt the key. After the encryption the type of the key will be set to "binary". Its original type will be restored after decryption.
 
