getenv: add a first version of a benchmark

--- a/src/libgetenv/CMakeLists.txt
+++ b/src/libgetenv/CMakeLists.txt
@@ -13,10 +13,11 @@ if (BUILD_SHARED AND ENABLE_CXX11 AND HAVE_GLIBC)
 
 	add_subdirectory(src)
 	add_subdirectory(examples)
+	add_subdirectory(benchmarks)
 
 	if (ENABLE_TESTING)
 		if (BUILD_FULL OR BUILD_STATIC)
-			add_subdirectory (tests)
+			add_subdirectory(tests)
 		endif (BUILD_FULL OR BUILD_STATIC)
 	endif(ENABLE_TESTING)
 
