--- a/src/plugins/python/CMakeLists.txt
+++ b/src/plugins/python/CMakeLists.txt
@@ -28,7 +28,7 @@ if (PYTHONLIBS_FOUND AND SWIG_FOUND)
 	set_source_files_properties (python.cpp PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
 
 	# bindings are required for tests
-	list (FIND BINDINGS "swig_python3" FINDEX)
+	list (FIND BINDINGS "swig_python" FINDEX)
 	if (BUILD_TESTING AND FINDEX GREATER -1)
 		# test environment clears env so setting PYTHONPATH is no option
 		# we workaround this by changing the current directory to our bindings
@@ -36,14 +36,14 @@ if (PYTHONLIBS_FOUND AND SWIG_FOUND)
 		add_plugintest (python
 			MEMLEAK
 			WORKING_DIRECTORY
-				${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python3/
+				${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python/
 			COMPILE_DEFINITIONS
 				PYTHON_PLUGIN_NAME=\"python\"
 		)
 
 		install (DIRECTORY python DESTINATION ${TARGET_TEST_DATA_FOLDER})
 	else ()
-		message (WARNING "swig_python3 bindings are required for testing, test deactivated")
+		message (WARNING "swig_python bindings are required for testing, test deactivated")
 	endif ()
 elseif (NOT PYTHONLIBS_FOUND)
 	remove_plugin (python "python 3 libs not found")
